--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "react-router-dom": "^6.0.2"
+        "react-redux": "^7.2.6",
+        "react-redux-toastr": "^7.6.5",
+        "react-router-dom": "^6.0.2",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.4.0"
     }
 }
